--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ regex = "0.2.6"
 rodio = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-shaderc = "0.6.2"
+shaderc = "0.8.2"
 slab = "0.4"
 structopt = "0.3.12"
 strum = "0.18.0"
 strum_macros = "0.18.0"
 thiserror = "1.0"
 uluru = "2"
-wgpu = "0.8"
-winit = "0.27.2"
+wgpu = { version = "0.16.0", features = ["spirv"] }
+winit = "0.28.3"
 
 [profile.dev.package."*"]
 opt-level = 3
