--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ futures = "0.3.5"
 lazy_static = "1.0.0"
 log = "0.4.1"
 nom = "7.1.3"
-num = "0.1.42"
-num-derive = "0.1.42"
+num = "0.4.0"
+num-traits = "0.2.15"
+num-derive = "0.3.3"
 png = "0.16"
 rand = { version = "0.7", features = ["small_rng"] }
 regex = "0.2.6"
